--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,19 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+    {% load ratings %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django-Setup</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" >
+    <!-- <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
+<script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script> -->
 </head>
 <body>
     <h1>Hello Django From Heroku</h1>
+
     
 </body>
 </html>
